@@ -84,7 +84,7 @@ class ZMFileCache extends ZMObject implements ZMCache {
     /**
      * {@inheritDoc}
      */
-    public function get($id) {
+    public function lookup($id) {
         return $this->cache_->get($id, $this->group_);
     }
 
