@@ -421,7 +421,7 @@ class ZMProducts extends ZMObject {
             $languageId = $session->getLanguageId();
         }
 
-        if (null != ($product = $this->cache->get(ZMTools::mkUnique($productId, $languageId)))) {
+        if (null != ($product = $this->cache->lookup(ZMTools::mkUnique($productId, $languageId)))) {
             return $product;
         }
 
@@ -462,7 +462,7 @@ class ZMProducts extends ZMObject {
         // check cache first
         $needLoadIds = array();
         foreach ($productIds as $id) {
-            if (null != ($product = $this->cache->get(ZMTools::mkUnique($id, $languageId)))) {
+            if (null != ($product = $this->cache->lookup(ZMTools::mkUnique($id, $languageId)))) {
                 $products[] = $product;
             } else {
                 $needLoadIds[$id] = $id;
