@@ -115,7 +115,7 @@ class zm_page_cache extends ZMPlugin {
     public function onZMThemeResolved($args) {
         // handle page caching
         if ($this->isEnabled()) {
-            if (false !== ($contents = $this->pageCache_->get($this->getRequestKey())) && $this->isCacheable()) {
+            if (false !== ($contents = $this->pageCache_->lookup($this->getRequestKey())) && $this->isCacheable()) {
                 echo $contents;
                 if (ZMSettings::get('plugins.zm_page_cache.stats', true)) {
                     ZMEvents::instance()->fireEvent($this, ZM_EVENT_PLUGINS_PAGE_CACHE_STATS);
