@@ -96,7 +96,7 @@ class ZMFacets extends ZMObject {
         if (null === $this->facets_ || $rebuild) {
             $key = $this->getCacheKey();
 
-            if (!$rebuild && false !== ($facets = $this->cache_->get($key))) {
+            if (!$rebuild && false !== ($facets = $this->cache_->lookup($key))) {
                 $this->facets_ = unserialize($facets);
             } else {
                 // build new
