@@ -1,5 +1,6 @@
 Release 0.9.4
 - prepend log messages with log level labels
+- change ZMCache signature; updated all cache using plugnis!
 
 Release 0.9.3
 - prefix all variables used in init.php and store.php with _zm_, as some might
